Bijayini | #2780 | Fix lower part of text is cut off throughout the app --- issue-2

--- a/ui/app/styles/clinical/_patientDashboard.scss
+++ b/ui/app/styles/clinical/_patientDashboard.scss
@@ -948,6 +948,7 @@ table.pivot-table {
         overflow: hidden;
         padding-right: 5px;
         float: left;
+        height:20px !important;
       }
     }
     .currentPatient {
@@ -1032,7 +1033,7 @@ table.pivot-table {
 }
 
 table.treatments-details-table{
-  font-size: 12px;
+  font-size: 12px;      
   td{
     border: none;
     width: 18%;
